# SmallProject

./: AlgorithmHTemplate.txt  CMakeLists.txt  ClassHTemplate.txt  ClassTestTemplate.txt  SingletonCPPTemplate.txt  file_parser.py  make_class.py  set_path_on_black.bat
API/: CMakeLists.txt
API/src/: Algorithm.cpp  AlgorithmFactory.cpp  Column.cpp  ColumnFactory.cpp  ColumnVector.cpp  Framework.cpp  PropertyFactory.cpp  TableColumn.cpp  TableWorkspace.cpp  Workspace.cpp  WorkspaceFactory.cpp  WorkspaceManager.cpp  WorkspaceProperty.cpp
API/test/: AlgorithmTest.cpp  TableTest.cpp  WorkspacePropertyTest.cpp  main.cpp
Code/: CMakeLists.txt
Code/Doxygen/: Doxyfile
Code/Formula/: CMakeLists.txt  make_class.bat
Code/Main/: CMakeLists.txt  main.cpp  test_parser.cpp  test_parser.h  test_problem.cpp  test_problem.h  test_spirit.cpp
Code/Numeric/: CMakeLists.txt
Code/QtAPI/: CMakeLists.txt
Code/qwt/: qwt.pro  qwtconfig.pri
DataObjects/: CMakeLists.txt
DataObjects/src/: AddChebfun.cpp  CalculateColumnValues.cpp  ChebfunToTable.cpp  ChebfunWorkspace.cpp  Column.cpp  ColumnFactory.cpp  ColumnVector.cpp  CopyChebfun.cpp  CreateChebfun.cpp  CreateDistribution.cpp  CreateUniformRandomData.cpp  EvalChebfun.cpp  NumericColumn.cpp  StringColumn.cpp  TableColumn.cpp  TableWorkspace.cpp  UniformChebfun.cpp  Unit.cpp
DataObjects/test/: AddChebfunTest.cpp  CalculateColumnValuesTest.cpp  ChebfunWorkspaceTest.cpp  CreateChebfunTest.cpp  TableTest.cpp  main.cpp
Formula/: CMakeLists.txt
Formula/src/: Bool.cpp  EParser.cpp  Expression.cpp  Function.cpp  FunctionFactory.cpp  Namespace.cpp  Operators.cpp  Parser.cpp  Reference.cpp  Scalar.cpp  ScriptLine.cpp  ScriptModule.cpp  ScriptModuleFunction.cpp  ScriptParser.cpp  Str.cpp  Variable.cpp  VariableFactory.cpp  simpleformula.cpp
Formula/test/: Copy of VariableFactoryTest.h  DummyFun.h  EParserTest.cpp  EParserTest.h  ExpressionTest.cpp  ExpressionTest.h  FunctionFactoryTest.h  FunctionTest.h  ParserTest.cpp  ScalarTest.h  ScriptLineTest.cpp  ScriptParserTest.cpp  ScriptTest.cpp  ScriptTest.h  VariableTest.cpp  main.cpp
GUI/: CMakeLists.txt
GUI/inc/: AddTableColumnDialog.h  AlgorithmDialog.h  AlgorithmExplorer.h  AlgorithmExplorer.ui  CurveManager.h  Demo.h  FileTask.h  FitBrowser.h  MainWindow.h  Model.h  OSGPhysModel.h  OSGWidget.h  Plot.h  PlotCurve.h  PlotDefaults.h  PlotDialog.h  SubWindow.h  Table.h  TableDialog.h  TableDialog.ui  Task.h  TaskFactory.h  TaskManager.h  ViewTask.h  WorkspaceExplorer.h  WorkspaceExplorer.ui
GUI/src/: AddTableColumnDialog.cpp  AlgorithmDialog.cpp  AlgorithmExplorer.cpp  CurveManager.cpp  Demo.cpp  FileTask.cpp  FitBrowser.cpp  MainWindow.cpp  Model.cpp  MyApplication.cpp  OSGPhysModel.cpp  OSGWidget.cpp  Plot.cpp  PlotCurve.cpp  PlotDefaults.cpp  PlotDialog.cpp  SubWindow.cpp  Table.cpp  TableDialog.cpp  Task.cpp  TaskFactory.cpp  TaskManager.cpp  ViewTask.cpp  WorkspaceExplorer.cpp  main.cpp
Goblin/: CMakeLists.txt
Goblin/src/: ComDiffDialog.cpp  Diatom.cpp  EnergyList.cpp  GoblinPlotPicker.cpp  GoblinTask.cpp  LineList.cpp  TestMorse.cpp  comdiff.cpp  creating.cpp  dbase.cpp  effham.cpp  enlist.cpp  exp_cond.cpp  gdata.cpp  humlicek.cpp  ifun.cpp  lineparams.cpp  mLDs.cpp  matrix.cpp  mio.cpp  object.cpp  ospline.cpp  spbase.cpp  spectrum.cpp  spline.cpp  splist.cpp  splist_gfit.cpp  text.cpp  utils.cpp  vjkg.cpp  voigt.cpp
Goblin/test/: ComDiffDialogTest.cpp  ComDiffTest.cpp  DiatomTest.cpp  GoblinPlotPickerTest.cpp  GoblinTaskTest.cpp  TestMorseTest.cpp  main.cpp
Kernel/: CMakeLists.txt
Kernel/src/: CommonProperties.cpp  DllOpen.cpp  EParser.cpp  Framework.cpp  LibraryManager.cpp  LibraryWrapper.cpp  Logger.cpp  Notification.cpp  Operators.cpp  ParsedExpressionString.cpp  Property.cpp  PropertyManager.cpp  Str.cpp
Kernel/test/: DataServiceTest.h  EParserTest.cpp  GeometryTypesTest.cpp  NotificationTest.h  ParsedExpressionStringTest.cpp  PropertyManagerTest.cpp  PropertyTest.cpp  TestDynamicFactory.h
Main/: CMakeLists.txt  main.cpp  roman_numerals.cpp  test_parser.cpp  test_parser.h  test_problem.cpp  test_spirit.cpp  test_spirit.h
Modeling/: CMakeLists.txt
Modeling/src/: AnimationController.cpp  Model.cpp  ModelTask.cpp  OSGPhysModel.cpp  OSGWidget.cpp
Numeric/: CMakeLists.txt  session
Numeric/src/: AddChebfun.cpp  AddFunctionValuesToTable.cpp  AnalyseBasis.cpp  BackToBackExponential.cpp  ChebFunction.cpp  ChebOperator.cpp  Chebfun.cpp  Chebfun2DSpline.cpp  ChebfunToTable.cpp  ChebfunVector.cpp  ChebfunWorkspace.cpp  Chebyshev.cpp  CompositeFunction.cpp  ConjugateFRMinimizer.cpp  Constants.cpp  ConstraintFactory.cpp  CopyChebfun.cpp  CostFuncFitting.cpp  CostFunction.cpp  CostFunctionFactory.cpp  CreateChebfun.cpp  CustomPolynomial.cpp  DiffChebfun.cpp  DomainCreatorTable1D.cpp  DomainFactory.cpp  DomainMap.cpp  EvalChebfun.cpp  Fit.cpp  FuncMinimizerFactory.cpp  Function1D.cpp  FunctionComposition.cpp  FunctionDomain.cpp  FunctionDomain1D.cpp  FunctionFactory.cpp  FunctionProperty.cpp  FunctionValues.cpp  GSLMatrix.cpp  GSLVector.cpp  Hermite.cpp  IFuncMinimizer.cpp  (+33 more)
Numeric/test/: AddFunctionValuesToTableTest.cpp  BackToBackExponentialTest.cpp  ChebFunctionTest.cpp  ChebOperatorTest.cpp  Chebfun2DSplineTest.cpp  ChebfunTest.cpp  ChebfunVectorTest.cpp  ChebyshevTest.cpp  ConjugateFRMinimizerTest.cpp  CopyChebfunTest.cpp  CostFuncFittingTest.cpp  CostFunctionFactoryTest.cpp  CreateChebfunTest.cpp  CustomPolynomialTest.cpp  DistributionTest.cpp  DomainCreatorTable1DTest.cpp  DomainMapTest.cpp  Function1DTest.cpp  FunctionCompositionTest.cpp  FunctionDomain1DTest.cpp  FunctionDomainTest.cpp  FunctionFactoryTest.cpp  FunctionPropertyTest.cpp  GSLMatrixTest.cpp  GSLVectorTest.cpp  HermiteTest.cpp  IFuncMinimizerTest.cpp  JacobiPolynomialTest.cpp  JacobiWeightTest.cpp  JointDomainFunctionTest.cpp  LagrangeInterpolationTest.cpp  LaguerreTest.cpp  LaguerreWeightTest.cpp  LeastSquaresTest.cpp  ParamFunctionTest.cpp  (+17 more)
Problem/: CMakeLists.txt
QtAPI/: CMakeLists.txt
Teach/: CMakeLists.txt  Text1.txt
TeachQt/: CMakeLists.txt
WebGUI/: CMakeLists.txt
qwt/: CMakeLists.txt
(+609 files in other folders)
